--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
         "@types/mocha": "^2.2.32"
     },
     "dependencies": {
+        "@types/mkdirp": "^0.5.2",
         "mkdirp": "^0.5.1"
     }
 }
