--- a/package.json
+++ b/package.json
@@ -94,14 +94,18 @@
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.0.3",
-        "vscode": "^1.0.0",
-        "mocha": "^2.3.3",
-        "@types/node": "^6.0.40",
-        "@types/mocha": "^2.2.32"
+        "@types/lodash": "^4.14.99",
+        "@types/mocha": "^2.2.48",
+        "@types/mz": "0.0.32",
+        "@types/node": "^9.4.0",
+        "mocha": "^5.0.0",
+        "typescript": "^2.6.2",
+        "vscode": "^1.1.10"
     },
     "dependencies": {
         "@types/mkdirp": "^0.5.2",
-        "mkdirp": "^0.5.1"
+        "lodash": "^4.17.4",
+        "mkdirp": "^0.5.1",
+        "mz": "^2.7.0"
     }
 }
