ts ignore templates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
         "rootDir": ".",
         "experimentalDecorators": true
     },
-    "exclude": ["node_modules", ".vscode-test"]
+    "exclude": ["node_modules", ".vscode-test", "templates"]
 }
