--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "url": "https://github.com/DengSir/template-generator-vscode.git"
     },
     "engines": {
-        "vscode": "^1.12.0"
+        "vscode": "^1.12.0",
+        "node": "^14.0.0"
     },
     "categories": [
         "Other"
@@ -90,17 +91,17 @@
     "scripts": {
         "vscode:prepublish": "tsc -p ./",
         "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
+        "test": "node ./out/src/test/runTest.js"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.99",
         "@types/mocha": "^2.2.48",
         "@types/mz": "0.0.32",
-        "@types/node": "^9.4.0",
+        "@types/node": "^14.0.0",
+        "@types/vscode": "^1.12.0",
         "mocha": "^5.0.0",
-        "typescript": "^2.6.2",
-        "vscode": "^1.1.10"
+        "typescript": "^4.1.5",
+        "vscode-test": "^1.5.0"
     },
     "dependencies": {
         "@types/mkdirp": "^0.5.2",
